# plonky2-jwt

./: .gitignore  Cargo.toml  README.md
plonky2/: Cargo.toml
plonky2/src/: lib.rs
plonky2/src/u32/: serialization.rs  witness.rs
plonky2/src/u32/gadgets/: arithmetic_u32.rs  mod.rs
plonky2/src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  mod.rs  subtraction_u32.rs
plonky2/src/util/serialization/: gate_serialization.rs
src/: lib.rs  main.rs  utils.rs
src/circuit/: fast_inclusion.rs  inclusion.rs  mod.rs  recursive.rs  sha256.rs  split_base.rs
src/circuit/__archive/: credential_hash.rs  inclusion.rs
