[package]
name = "plonky2_jwt"
version = "0.1.0"
edition = "2021"

[dependencies]
# plonky2 = { git = "https://github.com/mir-protocol/plonky2" }
# plonky2_u32 = { git = "https://github.com/mir-protocol/plonky2-u32" }
plonky2 = { path = "./plonky2" }

anyhow = "1.0.40"
itertools = "0.10.0"
log = "0.4.14"
sha2 = "0.10"
env_logger = "0.10.0"
rand = "0.8.4"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 1
